Adding support for input type checkbox

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
-        <!-- endbuild -->
     </head>
     <body>
         <div class="container">
@@ -25,7 +24,7 @@
                     <div class="row">
                         <div class="span12">
                             <ul>
-                                <li class="selectable">Select me</li>
+                                <li class="selectable"><input type="checkbox" name="something" value="1" />Select me</li>
                                 <li>You can't select me</li>
                                 <li class="selectable">Select me</li>
                             </ul>
