--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
             <div class="row">
                 <div class="span12">
                     <h1>iSelect</h1>
+                    <h3>Alaa</h3>
                     <p>A small script for making HTML elements selectable.</p>
 
                     <div class="row">
